--- a/assets/css/classroom.css
+++ b/assets/css/classroom.css
@@ -1,94 +1,140 @@
-* {box-sizing: border-box;}
 
-body { 
-  background-color: white;
-  margin: 0;
+body{
   font-family: 'Barlow', sans-serif;
 }
- 
 
-/* NAVBAR */
-.nav-list {
-    list-style-type: none;
-    margin: 0;
-    padding-top: 20px;
-    padding-left: 10px;
-    overflow: hidden;
-    background-color: white;
-  }
+.carousel-fade .carousel-inner .item {
+  opacity: 0;
+  transition-property: opacity;
+}
 
-  #logo {
-    font-family: 'Sacramento', cursive;
-    color: black;
-    font-size: 70px;
-    transition: 0.4s;
-    text-decoration: none;
-  }
- 
-  #pay-tuition, #contact-us, #testimonials, #program-dropdown, #about-dropdown {
-    float: right;
-    padding-right: 15px;
-  }
+.carousel-fade .carousel-inner .active {
+  opacity: 1;
+}
 
-  
-  li a, .dropbtn {
-    display: inline-block;
-    color: black;
-    text-align: center;
-    padding: 45px 10px;
-    transition: 0.4s;
-    text-decoration: none;
-  }
-  
-  li a:hover, .dropdown:hover .dropbtn {
-    background-color: rgba(138, 209, 209, 0.746);
-  }
-  
-  li.dropdown {
-    display: inline-block;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  
-  .dropdown-content a:hover {background-color: #f1f1f1}
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
+.carousel-fade .carousel-inner .active.left,
+.carousel-fade .carousel-inner .active.right {
+  left: 0;
+  opacity: 0;
+  z-index: 1;
+}
 
-  /* MAIN TEXT AREA */
+.carousel-fade .carousel-inner .next.left,
+.carousel-fade .carousel-inner .prev.right {
+  opacity: 1;
+}
 
-  /* HOME PAGE Styling */
-  .container {
-    background: rgba(255, 255, 255, 0.9);
-    text-align: center;
-    margin-top: 7%;
-    margin-left: 10%;
-    margin-bottom: 10%;
-    width: 80%;
-    height: auto;
-    padding: 10px;
-  }
-  
-  #main-classroom-title {
-    font-family: 'Barlow', sans-serif;
-    font-size: 50px;
-    margin-bottom: 15px;
-    color:  rgb(114, 182, 182);
-    text-align: center;
-  }
+.carousel-fade .carousel-control {
+  z-index: 2;
+} 
+@media all and (transform-3d), (-webkit-transform-3d) {
+    .carousel-fade .carousel-inner > .item.next,
+    .carousel-fade .carousel-inner > .item.active.right {
+      opacity: 0;
+      -webkit-transform: translate3d(0, 0, 0);
+              transform: translate3d(0, 0, 0);
+    }
+    .carousel-fade .carousel-inner > .item.prev,
+    .carousel-fade .carousel-inner > .item.active.left {
+      opacity: 0;
+      -webkit-transform: translate3d(0, 0, 0);
+              transform: translate3d(0, 0, 0);
+    }
+    .carousel-fade .carousel-inner > .item.next.left,
+    .carousel-fade .carousel-inner > .item.prev.right,
+    .carousel-fade .carousel-inner > .item.active {
+      opacity: 1;
+      -webkit-transform: translate3d(0, 0, 0);
+              transform: translate3d(0, 0, 0);
+    }
+} 
+.carousel-caption {
+    text-shadow: 0 1px 4px rgba(0,0,0,.9);
+  font-size:17px
+}
+.carousel-caption h3 {
+  font-size: 30px;
+  font-family: 'Barlow', sans-serif;
+}
+    html,
+    body,
+    .carousel,
+    .carousel-inner,
+    .carousel-inner .item {
+      height: 100%;
+   
+    } 
+    .item:nth-child(1) {
+      background: url('../images/Infant-Room.png');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+    }
+
+    .item:nth-child(2) {
+      background: url('../images/Infant-Room-2.png');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+    }
+
+    .item:nth-child(3) {
+      background: url('../images/Toddler-Room.png');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+    }
+    .item:nth-child(4) {
+      background: url('../images/Toddler-Room-2.png');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+    }
+    .item:nth-child(5) {
+      background: url('../images/Two-Yr-Old-Room.png');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+    }
+    .item:nth-child(6) {
+      background: url('../images/2-yr-old-rm.png');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+    }
+    .item:nth-child(7) {
+      background: url('../images/Three-Yr-Old-Room.png');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+    }
+    .item:nth-child(8) {
+      background: url('../images/Three-Yr-Old-Room-2.png');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+    }
+    .item:nth-child(9) {
+      background: url('../images/Four-yr-old-room.png');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+    }
+    .item:nth-child(10) {
+      background: url('../images/Four-Yr-Old-Room-2.png');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+    }
+    .item:nth-child(11) {
+      background: url('../images/Five-Yr-Old-Room.png');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+    }
+    .item:nth-child(12) {
+      background: url('../images/5-yr-old-rm.png');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+    }
